--- a/pagadurias/templates/pagadurias.html
+++ b/pagadurias/templates/pagadurias.html
@@ -3,15 +3,17 @@
 {% block content %}
 <br>
 <div class="bg-white p-6 rounded-lg shadow-lg font-sans">
-    <h2 class="text-2xl font-bold text-blue-900 mb-6 text-center">📋 Pagadurías Registradas</h2>
+    <div class="flex flex-row justify-between">
+        <h2 class="text-2xl font-bold text-blue-900 mb-6 text-center">📋 Pagadurías Registradas</h2>
+        <form method="GET" class="border-collapse w-1/2 mx-auto">
+            <input type="text" name="q" placeholder="Buscar por NIT o nombre"
+            value="{{ query }}"
+            class="border shadow-md rounded-md p-2  focus:outline-none focus:ring-6 focus:ring-blue-550">
+            <button type="submit" class="bg-blue-650 text-white px-4 py-2 shadow-md rounded-md">Buscar</button>
+        </form>
+    </div>
     
     <div class="overflow-x-auto">
-        <form method="GET" class="mb-4 flex justify-center border-collapse w-1/2 mx-auto">
-            <input type="text" name="q" placeholder="Buscar por NIT o nombre..."
-                value="{{ query }}"
-                class="border shadow-md rounded-md p-2  focus:outline-none focus:ring-6 focus:ring-blue-550">
-            <button type="submit" class="bg-blue-650 text-white px-4 shadow-md rounded-md">Buscar</button>
-        </form>
         <table class="w-full border-collapse bg-white shadow-lg rounded-lg overflow-hidden">
             <thead>
                 <tr class="bg-blue-650 text-white uppercase text-sm leading-normal">
