Add products and comparate for asociados vs aosicados register

--- a/pagadurias/templates/createPagaduria.html
+++ b/pagadurias/templates/createPagaduria.html
@@ -10,7 +10,7 @@
         {% include "components/message_django.html" %}
 
         <div class="flex justify-between bg-blue-550 p-2 rounded-2xl w-full text-xs sm:text-sm space-x-1 sm:space-x-2">
-            <button type="button" class="section-btn flex-1 px-2 sm:px-4 py-2 bg-white text-black font-semibold rounded-xl shadow-md transition-all duration-300 ease-in-out rounded-full whitespace-nowrap overflow-hidden text-ellipsis" data-step="0">
+            <button type="button" class="section-btn flex-1 px-2 sm:px-4 py-2 bg-white text-black font-semibold shadow-md transition-all duration-300 ease-in-out rounded-full whitespace-nowrap overflow-hidden text-ellipsis" data-step="0">
                 🏢 Datos Generales
             </button>
             <button type="button" class="section-btn flex-1 px-2 sm:px-4 py-2 text-white rounded-xl transition-all duration-300 ease-in-out whitespace-nowrap overflow-hidden text-ellipsis" data-step="1">
