--- a/pagadurias/templates/pagadurias.html
+++ b/pagadurias/templates/pagadurias.html
@@ -18,26 +18,34 @@
             <thead>
                 <tr class="bg-blue-650 text-white uppercase text-sm leading-normal">
                     <th class="py-3 px-4 text-left">Pagaduría</th>
-                    <th class="py-3 px-4 text-left">NIT</th>
-                    <th class="py-3 px-4 text-left">Asesor</th>
-                    <th class="py-3 px-4 text-left"></th>
-                    <th class="py-3 px-4 text-left"></th>
+                    <th class="py-3 px-4 text-center">NIT</th>
+                    <th class="py-3 px-4 text-center">Empleados</th>
+                    <th class="py-3 px-4 text-center">CDATS</th>
+                    <th class="py-3 px-4 text-center">Cooviahorros</th>
+                    <th class="py-3 px-4 text-center">Creditos</th>
+                    <th class="py-3 px-4 text-center">AhorroVista</th>
+                    <th class="py-3 px-4 text-center"></th>
+                    <th class="py-3 px-4 text-center"></th>
                 </tr>
             </thead>
             <tbody class="text-gray-700">
-                {% for pagaduria in pagadurias %}
+                {% for item in pagadurias %}
                 <tr class="border-b border-gray-200 hover:bg-blue-50 transition duration-300">
-                    <td class="py-3 px-4">{{ pagaduria.nombre }}</td>
-                    <td class="py-3 px-4">{{ pagaduria.nit }}</td>
-                    <td class="py-3 px-4">{{ pagaduria.asesorAsignado }}</td>
+                    <td class="py-3 px-4">{{ item.pagaduria.nombre }}</td>
+                    <td class="py-3 px-4 text-center">{{ item.pagaduria.nit }}</td>
+                    <td class="py-3 px-4 text-center">{{ item.data_extra.num_asociados}}/{{ item.pagaduria.totalEmpleados }}</td>
+                    <td class="py-3 px-4 text-center">{{ item.data_extra.num_cdat}}</td>
+                    <td class="py-3 px-4 text-center">{{ item.data_extra.num_cooviahorros}}</td>
+                    <td class="py-3 px-4 text-center">{{ item.data_extra.num_creditos}}</td>
+                    <td class="py-3 px-4 text-center">{{ item.data_extra.num_ahorroVista}}</td>
                     <td class="py-3 px-4">
-                        <a href="{% url 'info_pagaduria' pagaduria.id %}" class="text-blue-500 hover:underline">
-                            👁️ Ver
+                        <a href="{% url 'info_pagaduria' item.pagaduria.id %}" class="text-blue-500 hover:underline">
+                            👁️
                         </a>
                     </td>
                     <td class="py-3 px-4">
-                        <a href="{% url 'updatePagaduria' pagaduria.nombre pagaduria.tokenControl %}" class="text-blue-500 hover:underline">
-                            🛠️ Actualizar
+                        <a href="{% url 'updatePagaduria' item.pagaduria.nombre item.pagaduria.tokenControl %}" class="text-blue-500 hover:underline">
+                            🛠️
                         </a>
                     </td>
                 </tr>
