--- a/pagadurias/templates/pagadurias.html
+++ b/pagadurias/templates/pagadurias.html
@@ -44,7 +44,7 @@
                         </a>
                     </td>
                     <td class="py-3 px-4">
-                        <a href="{% url 'updatePagaduria' item.pagaduria.nombre item.pagaduria.tokenControl %}" class="text-blue-500 hover:underline">
+                        <a href="{% url 'updatePagaduria' item.pagaduria.id item.pagaduria.tokenControl %}" class="text-blue-500 hover:underline">
                             🛠️
                         </a>
                     </td>
