Update operaciones and pagadurias app

--- a/pagadurias/templates/pagaduriasAprobacion.html
+++ b/pagadurias/templates/pagaduriasAprobacion.html
@@ -53,8 +53,8 @@
                                 Revisar {{ request.user}}
                             </a>
                         {% endif %}
-                            <a href="{% url 'check_rechazo' pagaduria.nombre pagaduria.tokenControl %}" class="">
-                                Modificar
+                            <a href="{% url 'check_rechazo' pagaduria.nombre pagaduria.tokenControl %}" class="text-blue-500 hover:underline">
+                                🛠️ Modificar
                             </a>
                     </td>
                 </tr>
