--- a/theme/templates/partials/sidebar.html
+++ b/theme/templates/partials/sidebar.html
@@ -38,14 +38,14 @@
                 <span>Operaciones</span>
             </a>
         </li>
-        <li>
+        {% comment %} <li>
             <a href="{% url 'estadisticas' %}"
                class="flex items-center gap-3 p-2 rounded-lg transition duration-300 
                {% if request.path == '/estadisticas/' %}bg-blue-550 shadow-md{% else %}bg-blue-450 hover:bg-blue-550 hover:shadow-md{% endif %} text-sm">
                 <span class="w-6 h-6 bg-white rounded-full flex items-center justify-center text-blue-450">📊</span>
                 <span>Estadísticas</span>
             </a>
-        </li>
+        </li> {% endcomment %}
         <li>
             <a href="{% url 'asesores' %}"
                class="flex items-center gap-3 p-2 rounded-lg transition duration-300 
