--- a/administrador/templates/usuarios/updateUser.html
+++ b/administrador/templates/usuarios/updateUser.html
@@ -1,3 +1,5 @@
+{% load widget_tweaks %}
+{% load static %}
 <div class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50">
     <div class="bg-white p-6 rounded-lg shadow-lg">
         <h2 class="text-2xl font-bold text-blue-900 pb-4">📋 Asesores</h2>
@@ -7,32 +9,32 @@
             <input type="hidden" name="form-type" value="update-user">
             <input type="hidden" name="user-id" value="{{ user.id }}">
             <div class="flex flex-row gap-10">
-                <div>
-                    <p>Nombre:</p>
+                <div class="p-4 bg-white rounded">
+                    <p><strong>👤 Nombre:</strong></p>
                     <p>{{ user.nameComplate }}</p>
                 </div>
-                <div>
-                    <p>Cedula:</p>
-                    {{ formUser.cedula }}
+                <div class="p-4 bg-white rounded">
+                    <p><strong>🆔 Cedula:</strong></p>
+                    {{ formUser.cedula|add_class:"peer input-field" }}
                 </div>
             </div>
             <div class="flex flex-row justify-between">
-                <div>
-                    <p>Area:</p>
-                    {{ formUser.area }}
+                <div class="p-4 bg-white rounded ">
+                    <p><strong>🏢 Area:</strong></p>
+                    {{ formUser.area|add_class:"peer w-20" }}
                 </div>
-                <div>
-                    <p>Correo:</p>
+                <div class="p-4 bg-white rounded">
+                    <p><strong>📧 Correo:</strong></p>
                     <p>{{ user.email }}</p>
                 </div>
-                <div>
-                    <p>Estado:</p>
-                    {{ formUser.checkForTI }}
+                <div class="p-4 bg-white rounded">
+                    <p><strong>🏢 Estado:</strong></p>
+                    {{ formUser.checkForTI}}
                 </div>
             </div>
             <div class="flex">
                 <button
-                    class="bg-blue-450 w-fit text-white px-4 py-1 rounded-md ml-auto hover:scale-105 transition-all duration-300"
+                    class="text-right bg-blue-450 w-fit text-white px-4 py-1 rounded-md ml-auto hover:scale-105 transition-all duration-300 "
                     type="submit">
                     Actualizar
                 </button>
